--- a/src/styles/Products.css
+++ b/src/styles/Products.css
@@ -11,7 +11,7 @@
     font-size: 60px;
   }
   
-  .menuList {
+  .productsList {
     width: 70vw;
     height: auto;
     display: grid;
@@ -19,22 +19,21 @@
     place-items: center;
   }
   
-  /* MENU ITEM STYLING */
   
-  .menuItem {
+  .productsItem {
     border-radius: 15px;
     width: 300px;
     height: 350px;
     margin: 20px;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   }
-  .menuItem:hover {
+  .productsItem:hover {
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
     transition: 0.3s ease-in;
     cursor: pointer;
   }
   
-  .menuItem div {
+  .productsItem div {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     width: 100%;
@@ -44,19 +43,19 @@
     background-size: cover;
   }
   
-  .menuItem h1,
-  .menuItem p {
+  .productsItem h1,
+  .productsItem p {
     margin-left: 20px;
   }
   
   @media only screen and (max-width: 1300px) {
-    .menuList {
+    .productsList {
       grid-template-columns: 1fr 1fr;
     }
   }
   
   @media only screen and (max-width: 800px) {
-    .menuList {
+    .productsList {
       grid-template-columns: 1fr;
     }
   }
