--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -3,6 +3,7 @@
     height: 90vh;
     display: flex;
     flex-direction: column;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
   
   .aboutTop {
@@ -11,7 +12,6 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   }
   
   .aboutBottom {
@@ -27,11 +27,13 @@
   }
   
   .about .aboutBottom h1 {
-    font-weight: 400;
+    font-weight: 400px;
     font-size: 70px;
     color: black;
     height: 30px;
     display: flex;
     justify-content: center;
     transform: translateY(-40px);
+    
   }
+
